Quickfix scrollbar bug on Welcome

--- a/src/TrueOrFalse.Frontend.Web/Views/Welcome/Welcome.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Welcome/Welcome.less
@@ -159,6 +159,7 @@ h4 {
     padding: 0 20px 100px 20px;
     font-size: 18px;
     overflow: auto;//Prevent overflowing of margin-top of h1
+    overflow-x: hidden;
 
     .media-md-up( {
         padding-left: 20px;
@@ -560,12 +561,12 @@ h4 {
 ------------------------------------------------------*/
 
 #blogposts {
-    .makeFullWidth;
-    margin-top: 85px;
-    margin-bottom: 55px;
+    //.makeFullWidth;
+    margin: 85px -20px 55px;
+    //margin-bottom: 55px;
     padding: 30px 20px 10px;
     background-color: #eeeeee;
-    
+
     h3 {
         margin-bottom: 75px;
         margin-top: 10px;
